--- a/src/components/chat/chatStyles/Message.css
+++ b/src/components/chat/chatStyles/Message.css
@@ -37,16 +37,17 @@
     margin-right: 100px;
     max-width:200px;
     height: 200px;
+    border-radius: 20px;
 }
 
 .message__image--user {
     margin-left: 100px;
     max-width:200px;
     height: 200px;
+    border-radius: 20px;
 }
 
 .message__image img, .message__image--user img {
-    width:100%;
     height: 100%;
     object-fit: contain;
     border-radius: 20px;
